--- a/src/template.html
+++ b/src/template.html
@@ -9,8 +9,25 @@
   <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+  <div class="video-background">
+    <video loop muted autoplay playsinline>
+      <source src="./assets/background-mobile.webm" type="video/webm" media="(max-width: 768px)">
+      <source src="./assets/background-mobile.mp4" type="video/mp4" media="(max-width: 768px)">
+      <source src="./assets/background-desktop.webm" type="video/webm">
+      <source src="./assets/background-desktop.mp4" type="video/mp4">
+    </video>
+  </div>
+
   <header>
-    <span>YUNAI</span>
+    <span class="logo">YUNAI</span>
+
+    <button class="hamburger-menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+
     <nav>
       <div class="nav-wrapper">
         <button>MENU</button>
@@ -18,9 +35,11 @@
         <button>LOCATION</button>
       </div>
     </nav>
+
     <div class="reservation-wrapper">
-      <button class="reservation">RESERVATION</button>
-  </div>
+      <button class="reservation">RESERVATIONS</button>
+    </div>
+
   </header>
   <div id="content">
   </div>
