--- a/src/template.html
+++ b/src/template.html
@@ -4,18 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    html { background-color: #000; }
+    header { opacity: 0; }
+  </style>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
+  <div id="initialLoad"></div>
+
   <div class="video-background">
     <video loop muted autoplay playsinline>
-      <source src="./assets/background-mobile.webm" type="video/webm" media="(max-width: 768px)">
       <source src="./assets/background-mobile.mp4" type="video/mp4" media="(max-width: 768px)">
-      <source src="./assets/background-desktop.webm" type="video/webm">
+      <source src="./assets/background-mobile.webm" type="video/webm" media="(max-width: 768px)">
       <source src="./assets/background-desktop.mp4" type="video/mp4">
+      <source src="./assets/background-desktop.webm" type="video/webm">
     </video>
   </div>
 
