--- a/src/template.html
+++ b/src/template.html
@@ -18,12 +18,7 @@
   <div id="initialLoad"></div>
 
   <div class="video-background">
-    <video loop muted autoplay playsinline>
-      <source src="./assets/background-mobile.mp4" type="video/mp4" media="(max-width: 768px)">
-      <source src="./assets/background-mobile.webm" type="video/webm" media="(max-width: 768px)">
-      <source src="./assets/background-desktop.mp4" type="video/mp4">
-      <source src="./assets/background-desktop.webm" type="video/webm">
-    </video>
+    <video loop muted autoplay playsinline></video>
   </div>
 
   <header>
