feat(navigation, content): implement dynamic tabbed content system
This commit introduces the main interactive functionality of the website.
A new `navOptions` class now manages a tabbed content system, allowing users to click navigation buttons to dynamically load different sections into the main content area with fade transitions.

feat(js):
- Created the `navOptions` class to handle all main navigation logic.
- Implemented an event delegation pattern on the navigation wrapper for efficient click handling.
- Built a `contentMap` to store HTML for the 'Menu', 'Contact', and 'Location' sections.
- Wrote logic to dynamically inject content into the page and manage the active state, including a cross-fade effect when switching between tabs.

feat(css):
- Added all necessary styles for the new content sections (`.menu-wrapper`, `.contact-wrapper`, etc.).
- Implemented a fade transition on the `#content` container via an `.is-fading` class, controlled by the new JavaScript logic.
- Solved an issue with text backgrounds on wrapped lines by using a nested `<span>` technique, ensuring the background perfectly hugs the text.

fix(mobile):
- Prevented interaction with hidden mobile navigation buttons by correctly toggling the `pointer-events` property when the menu is inactive.

refactor(html):
- Added `data-option` attributes to navigation buttons to provide a clean and scalable hook for the JavaScript logic.

--- a/src/template.html
+++ b/src/template.html
@@ -32,9 +32,9 @@
 
     <nav>
       <div class="nav-wrapper">
-        <button>MENU</button>
-        <button>CONTACT</button>
-        <button>LOCATION</button>
+        <button data-option="menu">MENU</button>
+        <button data-option="contact">CONTACT</button>
+        <button data-option="location">LOCATION</button>
       </div>
     </nav>
 
@@ -43,8 +43,9 @@
     </div>
 
   </header>
-  <div id="content">
-  </div>
+
+  <div id="content"></div>
+
 </body>
 </html>
 
