feat(menu, swiper): implement swipeable multi-page menu and site footer
This commit introduces the final major feature: a swipeable, multi-page menu carousel, powered by the Swiper.js library.
It also adds a footer to complete the page layout.

feat(menu):
- Refactored the static menu into a swipeable carousel to display multiple menu categories (Starters, Nigiri, Rolls, etc.) in an intuitive, mobile-friendly way.
- Added and populated four new detailed menu sections with content appropriate for a high-end sushi restaurant.
- Implemented and styled custom pagination dots for the slider, changing them from the default circles to squares to match the site's aesthetic.

feat(footer):
- Added a new `<footer>` component with developer attribution to the main page layout.

refactor(js):
- Updated the `navOptions` class to dynamically initialize the Swiper instance whenever the menu content is injected into the DOM.
- Restructured the menu's HTML within the `contentMap` to support the Swiper filmstrip/slide layout.

fix(css):
- Resolved a CSS layout issue to correctly center the non-full-width Swiper component on the page.

build:
- Added 'swiper' as a new project dependency.

--- a/src/template.html
+++ b/src/template.html
@@ -43,9 +43,13 @@
     </div>
 
   </header>
-
   <div id="content"></div>
+  <footer>
+  <p>
+    &copy; 2025 YUNAI  |  Designed & Developed by 
+    <a href="https://github.com/lcs-hnd" target="_blank" rel="noopener noreferrer">Lucas H.</a>
+  </p>
+</footer>
 
 </body>
 </html>
-
